Inclusion del uso del Gyroscopio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoFinal">
         <activity
+            android:name=".ui.GyroscopeSensor"
+            android:exported="true" />
+        <activity
             android:name=".RotationVectorSensor"
             android:exported="false" />
         <activity
