--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.proyectofinal">
 
-
     <uses-feature
         android:name="android.hardware.sensor.proximity"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.gyroscope"
         android:required="true" />
 
     <application
@@ -14,10 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoFinal">
-
         <activity
             android:name=".ProximitySensor"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".GyroscopeSensor"
             android:exported="true" />
